Corrections mineures version mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -203,7 +203,7 @@ h1 {
 #dropMenuMobileContenu {
     position: absolute;
     top: 3rem;
-    align-items: center;
+    text-align: center;
     width: 100%;
     padding: 1rem;
     background-color: var(--cappaCouleurPrincipale);
@@ -214,10 +214,15 @@ h1 {
     border-radius: 5px;
     font-size: 1.25rem;
     color: var(--cappaCouleurSecondaire);
+    line-height: 2rem;
 }
 
 .dropLink:hover {
     color: var(--cappaIcones);
+}
+
+#sponsoDesktop {
+    display: none;
 }
 
 #separationGraphique {
